design changes and time alignment stop bug fix

--- a/src/components/sidebar/routePathView/linkNodeListViewTab.scss
+++ b/src/components/sidebar/routePathView/linkNodeListViewTab.scss
@@ -2,61 +2,95 @@
 @import '../../shared/styles/flexbox';
 @import '../../shared/styles/form';
 
-.linkNodeListViewTabView {
+.linkNodeListTabView {
     height: calc(100% - 42px); // Should just be 100%. Needs fixing
     display: flex;
     flex-direction: column;
 
     .contentWrapper {
         overflow-y: auto;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+        padding: 10px;
 
-    .linkNodeListViewItem {
-        border-bottom: 1.5px solid $lightGrey;
-        padding: 15px;
-        font-weight: bold;
-        color: $labelColor;
-        font-size: $mediumFontSize;
-
-
-        .nodeItem {
-            padding-bottom: 10px;
-        }
-
-        .nodeItem:last-of-type {
-            padding-bottom: 0px;
-        }
-
-        .linkItem {
-            display: flex;
-            flex-direction: row;
-            padding-bottom: 10px;
-        }
-
-        .itemId {
-            color: #007ac9;
+        .linkNodeListViewItem {
             font-weight: bold;
-            margin-left: 5px;
+            color: $labelColor;
+            font-size: $mediumFontSize;
+
+            .attributes {
+                padding: 15px;
+                position: relative;
+                align-self: center;
+
+                .label {
+                    display: flex;
+                    flex-direction: row;
+                }
+
+                .id {
+                    color: $blue;
+                    font-weight: bold;
+                    margin-left: 5px;
+                }
+
+                .type {
+                    margin-left: 10px;
+                    white-space: nowrap;
+
+                    .notInUse {
+                        color: red;
+                    }
+                }
+
+                .editButton {
+                    margin-left: 5px;
+                    cursor: pointer;
+                }
+
+                .editButton:hover {
+                    color: $blue;
+                }
+
+                .timeAlignment {
+                    margin-left: 10px;
+                    color: #0dd5cd;
+                }
+
+            }
+
         }
 
-        .nodeAttribute {
-            margin-left: 10px;
+        .item {
             display: flex;
             flex-direction: row;
+            height: 100%;
+            width: 100%;
+            border-bottom: 1.5px solid $lightGrey;
+
+            .itemToggle {
+                font-size: 22px;
+                cursor: pointer;
+                color: $mediumGrey;
+                transition: .5s;
+                position: relative;
+                padding: 15px;
+                height: 100%;
+                width: 100%;
+                text-align: end;
+
+                :hover {
+                    color: darken($mediumGrey, 10);
+                    transition: .5s;
+                }
+            }
         }
 
-        .editButton {
-            margin-left: 5px;
-            cursor: pointer;
+        .item:hover {
+            border-right: 3px solid #007ac9;
+            border-left: 3px solid #dedede4d;
+            background-color: #dedede4d;
         }
-
-        .editButton:hover {
-            color: #007ac9;
-        }
-
     }
+
     .searchResultButton {
         padding: 20px;
         background-color: $saveButtonGreen;
@@ -65,12 +99,9 @@
         font-size: $mediumFontSize;
         cursor: pointer;
     }
+
     .searchResultButton:hover {
         background-color: darken($saveButtonGreen, 10)
     }
-    .linkNodeListViewItem:hover {
-        border-right: 3px solid #007ac9;
-        border-left: 3px solid #dedede4d;
-        background-color: #dedede4d;
-    }
+
 }
